--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@100;300;400;500;600;700;800;900&display=swap");
+
+:root {
+  --font-base: "Bitter", sans-serif;
+  --purple-color: #7f00e0;
+  --sea-green-color: #aadcec;
+  --sea-green-dark: #73bbc5;
+  --white-blue-color: #f4f9fc;
+  --dark-navy-bule-color: hsl(231, 73%, 22%);
+  --gray-color: #919795;
+  --black-color: #030303;
+  --white-color: #ffffff;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
 }
